[package]
name = "piston"
version = "0.1.0"
edition = "2021"
authors = ["Rens Verhage <rensverhage@gmail.com>"]

[dependencies]
anyhow = "1.0.80"
ash = { version = "0.37.3", features = ["debug"] }
ash-window = "0.12.0"
bytemuck = "1.14.3"
cocoa = "0.25.0"
env_logger = "0.11.2"
log = "0.4.20"
metal = "0.27.0"
num-traits = "0.2.18"
winit = "0.29.11"
