[package]
name = "piston"
version = "0.1.0"
edition = "2021"
authors = ["Rens Verhage <rensverhage@gmail.com>"]

[dependencies]
anyhow = "1.0.81"
ash = { version = "0.37.3", features = ["debug"] }
ash-window = "0.12.0"
cocoa = "0.25.0"
env_logger = "0.11.3"
log = "0.4.21"
metal = "0.27.0"
num-traits = "0.2.18"
winit = "0.29.15"
